# currency-converter-api

./: .dockerignore  .env -template  .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.db  Dockerfile.frontend  Dockerfile.nginx  README.md  api_main.py  docker-compose.yml  k8s.ps1  main.py  nginx.conf.template  pyproject.toml  settings.py  setup.cfg  start_nginx.sh  start_updates.py
backend/: Dockerfile.api  Dockerfile.db  api_main.py  pyproject.toml  settings.py  start_updates.py
backend/currency_api/: diagnostics_router.py  user_auth_router.py
backend/db/: currency_db.py  database.py  models.py
backend/docs/: Makefile  make.bat
backend/ext_api/: ext_api_interface.py
backend/tests/: .env-template  conftest.py  docker-compose.yml  sample_rates.py
currency_api/: currencies_router.py  user_auth_router.py  utils.py
db/: currency_db.py  database.py  models.py  utils.py
docs/: .gitignore  api_endpoints.html  docker_containers.html  external_api.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  settings_config.html  testing.html  usage.html
ext_api/: __init__.py  exchange_rate.py  rates_downloader.py
frontend/: .eslintrc.yml  Dockerfile.frontend  Dockerfile.nginx  package-lock.json  package.json  start_nginx.sh
kubernetes/: api-dep-svc.yml  db-dep-svc.yml  dev-server-dep-svc.yml  frontend-dep-svc.yml  prod-server-dep-svc.yml  redis-dep-svc.yml  updater-dep-svc.yml
tests/: .env-template  .test_env  conftest.py  docker-compose.yml  sample_rates.py  test_api.py  test_db.py
utils/: logger.py
(+84 files in other folders)
