[tool.poetry]
name = "currency-converter-api"
version = "0.1.0"
description = "Currency converter API using FastAPI"
authors = ["Salman Raza <raza.salman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.39"
pydantic = {extras = ["dotenv"], version = "^1.7.2"}
requests = "^2.25.0"
PyMySQL = "^1.0.2"
cryptography = "^37.0.4"
aiomysql = "^0.1.1"
APScheduler = "^3.9.1"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
bcrypt = "^3.2.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^2.12.1"
ptpython = "^3.0.19"
pre-commit = "^2.13.0"
flake8 = "^3.9"
black = "^22.6.0"
mypy = "^0.910"
isort = "^5.9.2"
python-on-whales = "^0.49.0"
types-requests = "^2.28.3"
types-PyMySQL = "^1.0.19"
pytest-asyncio = "^0.19.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
